Actualización del informe con correción del circuito de protección

--- a/Informe/Cover_page/cover_formal.tex
+++ b/Informe/Cover_page/cover_formal.tex
@@ -20,7 +20,9 @@
 		\begin{tabbing}
 			\hspace{2cm}\=\+\myTitle\\
 				TEMA: \mySubtitle\\
+				\ifTutor
 				TUTOR: \myTutor\\
+				\fi
 				FECHA: \today\\
 				\ifPutgroup
 				GRUPO: \texttt{\myGroupNumber}\\
