--- a/Informe/Figuras/proteccion.tex
+++ b/Informe/Figuras/proteccion.tex
@@ -8,24 +8,28 @@
    \normalsize
    \parbox{4.66667in}{
    \includegraphics[scale=1]{proteccion}\\
-   % translate x=3040 y=-1322 scale 0.38
-   \putbox{3.14in}{4.84in}{1.20}{Etapa}%
-   \putbox{3.06in}{4.67in}{1.20}{de salida}%
-   \putbox{3.14in}{0.67in}{1.20}{Etapa}%
-   \putbox{3.06in}{0.50in}{1.20}{de salida}%
-   \putbox{4.14in}{2.42in}{1.20}{RL}%
-   \putbox{3.64in}{3.50in}{1.20}{Re}%
-   \putbox{3.56in}{2.50in}{1.20}{Re}%
-   \putbox{0.72in}{4.00in}{1.20}{R60}%
-   \putbox{1.72in}{3.75in}{1.20}{R59}%
-   \putbox{1.72in}{2.34in}{1.20}{R57}%
-   \putbox{1.31in}{1.67in}{1.20}{R58}%
-   \putbox{0.06in}{3.50in}{1.20}{Q52}%
-   \putbox{0.06in}{2.09in}{1.20}{Q53}%
-   \putbox{1.39in}{4.00in}{1.20}{22k}%
-   \putbox{1.72in}{3.34in}{1.20}{270}%
-   \putbox{1.72in}{1.92in}{1.20}{270}%
-   \putbox{0.72in}{1.59in}{1.20}{22k}%
+   % translate x=3040 y=-1116 scale 0.38
+   \putbox{3.14in}{5.91in}{1.20}{Etapa}%
+   \putbox{3.06in}{5.74in}{1.20}{de salida}%
+   \putbox{3.14in}{0.91in}{1.20}{Etapa}%
+   \putbox{3.06in}{0.74in}{1.20}{de salida}%
+   \putbox{4.14in}{3.08in}{1.20}{RL}%
+   \putbox{3.64in}{4.58in}{1.20}{Re}%
+   \putbox{3.56in}{2.74in}{1.20}{Re}%
+   \putbox{0.72in}{5.08in}{1.20}{R60}%
+   \putbox{1.72in}{4.83in}{1.20}{R59}%
+   \putbox{1.72in}{2.58in}{1.20}{R57}%
+   \putbox{1.31in}{1.91in}{1.20}{R58}%
+   \putbox{0.06in}{4.58in}{1.20}{Q52}%
+   \putbox{0.06in}{2.33in}{1.20}{Q53}%
+   \putbox{1.39in}{5.08in}{1.20}{22k}%
+   \putbox{1.72in}{4.41in}{1.20}{270}%
+   \putbox{1.72in}{2.16in}{1.20}{270}%
+   \putbox{0.72in}{1.83in}{1.20}{22k}%
+   \putbox{3.39in}{6.58in}{1.20}{\centbox{$V_{CC+}$}}%
+   \putbox{3.39in}{0.08in}{1.20}{\centbox{$V_{CC-}$}}%
+   \putbox{1.39in}{5.66in}{1.20}{$V_{CC+}$}%
+   \putbox{1.31in}{1.33in}{1.20}{$V_{CC-}$}%
    } % close 'parbox'
    } % close 'scalebox'
    \vspace{-\baselineskip} % this is not necessary, but looks better
