--- a/Informe/Secciones/I2_requerimientos.tex
+++ b/Informe/Secciones/I2_requerimientos.tex
@@ -4,8 +4,8 @@ El amplificador de audio a diseñar debe cumplir las siguientes especificaciones
 	\item Topología de la etapa de salida Clase G alternativa.
 	\item Tensión de alimentación $\pm \SI{30}{\volt}$ con una variación de \SI{5}{\volt}.
 %	\item Potencia de salida nominal de \SI{39}{\watt} sobre \SI{8}{\ohm} a \SI{1}{\kilo\hertz} con $THD<0,02\%$.
-	\item Potencia de salida nominal de \SI{40}{\watt} sobre \SI{8}{\ohm} a \SI{1}{\kilo\hertz} con $THD<0,02\%$.
-	\item Potencia de salida a \SI{1}{\watt} sobre \SI{8}{\ohm} con $THD<0,01\%$. 
+	\item Potencia de salida nominal de \SI{40}{\watt} sobre \SI{8}{\ohm} a \SI{1}{\kilo\hertz} con $THD<\num{0.02}\%$.
+	\item Potencia de salida a \SI{1}{\watt} sobre \SI{8}{\ohm} con $THD<\num{0.01}\%$. 
 	\item Respuesta en frecuencia \SI{20}{\hertz} a \SI{20}{\kilo\hertz}.
 	\item Tensión de \textit{offset} en la salida en continua \SI{5}{\milli\volt}.
 	\item \textit{Slew Rate} $\approx$ \SI{10}{\volt\per\micro\second}.
@@ -13,7 +13,7 @@ El amplificador de audio a diseñar debe cumplir las siguientes especificaciones
 	\item Impedancia de entrada del orden de \SI{100}{\kilo\ohm}.
 	\item Impedancia de salida del orden de los \SI{}{\milli\ohm}.
 	\item Factor de amortiguamiento del orden de 500.
-	\item Margen de fase mayor que \SI{45}{\degree}.
+	\item Margen de fase $\geq$ \SI{45}{\degree}.
 \end{itemize}
 
 
