--- a/Informe/Secciones/II3_func_gral.tex
+++ b/Informe/Secciones/II3_func_gral.tex
@@ -1,2 +1,9 @@
 % Acá se explican los bloques
 
+	El primer bloque del amplificador cumple el rol de aislar el dispositivo del generador externo de señal y proveer al resto del circuito con la señal con la menor degradación posible. A su vez integra la realimentación global del circuito para estabilizar al mismo.\\
+
+	\indent A continuación, el bloque VAS se encarga de amplificar la tensión de la señal proveniente del primer bloque. Esta etapa es de vital importancia porque la misma determina el ancho de banda en alta frecuencia del circuito completo, como también la máxima excursión de tensiones de salida.\\
+
+	\indent Finalmente el separador o \emph{buffer} es el que toma la señal del VAS y aumenta su potencia al entregar la corriente que requiera la carga (siempre que esta corriente sea menor a la máxima permitida por el mismo circuito).
+
+
