--- a/Informe/Secciones/III0_diseno_teo.tex
+++ b/Informe/Secciones/III0_diseno_teo.tex
@@ -3,9 +3,8 @@
 
 \begin{figure}[H]
 	%\centering
-	\includegraphics[angle=-90,width=\textwidth, trim = 0cm 0cm 2cm 4cm]{esquema2.pdf}
+	\includegraphics[angle=-90,width=1.1\textwidth, trim = 0.5cm 3.0cm 4cm 4cm]{esquema2.pdf}
 	\caption{Circuito completo.}
 	\label{fig.cto_completo}
 \end{figure}
 
-\pagebreak
