--- a/Informe/Secciones/III2_vas.tex
+++ b/Informe/Secciones/III2_vas.tex
@@ -13,7 +13,7 @@ Por otra parte la ganancia de tensión del comparador es
 
 \begin{equation}
 	\centering
-	A_{v,pd} = \frac{-g_m \cdot R_ca}{1+g_m \cdot R_e} = \frac{-80mA/V \cdot \SI{36}{\kilo\ohm} }{ 1 + 80mA/V \cdot \SI{100}{\ohm} } = -13
+	A_{v,pd} = \frac{-g_m \cdot R_{ca}}{1+g_m \cdot R_e} = \frac{\SI{-80}{\mA\per\V} \cdot \SI{36}{\kilo\ohm} }{ 1 + \SI{80}{\mA\per\V} \cdot \SI{100}{\ohm} } = -13
 	\label{ec.av_pd}
 \end{equation}
 
