--- a/Informe/Secciones/IV1_componentes.tex
+++ b/Informe/Secciones/IV1_componentes.tex
@@ -34,8 +34,8 @@ En las Tablas \ref{tab:lst_tr}, \ref{tab:lst_cap} y \ref{tab:lst_resist} se deta
 		\SI{10}{\micro\farad} & C18 & Electrolítico & 1 \\	 
 		\SI{47}{\micro\farad} & C1, C4, C20, & Electrolítico & 3 \\
 		\SI{1}{\milli\farad} & C11 & Electrolítico & 1 \\
-		\SI{100}{\nano\farad} & C2, C9, C12, C15 & Poliester & 3 \\
-		\SI{1}{\nano\farad} & C7 & Poliester & 1 \\
+		\SI{100}{\nano\farad} & C2, C9, C12, C15 & Poliéster & 3 \\
+		\SI{1}{\nano\farad} & C7 & Poliéster & 1 \\
 		\SI{330}{\pico\farad} & C10 & Cerámico & 1 \\
 		\bottomrule
 	\end{tabular}
@@ -62,7 +62,7 @@ En las Tablas \ref{tab:lst_tr}, \ref{tab:lst_cap} y \ref{tab:lst_resist} se deta
 		\SI{270}{\ohm} & R59, R60 & SMD 0805 & 2 \\ 
 		\SI{560}{\ohm} & R51, R62 & SMD 0805 & 2 \\
 		\SI{680}{\ohm} & R44 & SMD 0805 & 1\\
-		\SI{1}{\kilo\ohm} & R73, R74, R15, R62, R63, R67, R68,  & SMD 0805 & 7 \\
+		\SI{1}{\kilo\ohm} & R73, R74, R15, R62, R63, R67, R68  & SMD 0805 & 7 \\
 		\SI{2.2}{\kilo\ohm} & R5, R47 & SMD 0805 & 2 \\ 
 		\SI{3.3}{\kilo\ohm} & R43 & SMD 0805 & 1 \\
 		\SI{5.6}{\kilo\ohm} & R61, R66 & SMD 0805 & 2 \\
