--- a/Informe/Secciones/V0_polarizacion.tex
+++ b/Informe/Secciones/V0_polarizacion.tex
@@ -2,7 +2,7 @@ Con el fin de corroborar y ajustar los resultados teóricos obtenidos, se realiz
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, trim = 2cm 4cm 4cm 2cm]{sim_polarizacion.pdf}
+	\includegraphics[width=1.2\textwidth, trim = 4cm 4cm 4cm 2cm]{sim_polarizacion.pdf}
 	\caption{Tensiones y corrientes de reposo.}
 	\label{fig:sim_pol}
 \end{figure}
