--- a/Informe/Secciones/V6_escalon.tex
+++ b/Informe/Secciones/V6_escalon.tex
@@ -1,4 +1,4 @@
-\subsubsection{Respuesta la escalón para pequeña señal}
+\subsection{Respuesta la escalón para pequeña señal}
 
 \HgraficarPNG{0.5}{sim_rta_escalon_peque.png}{Respuesta al escalón en pequeña señal.}{fig:rta_escalon_peque}
 
@@ -9,7 +9,7 @@
 %	\label{fig:rta_escalon_peque}
 %\end{figure}
 
-\subsubsection{Respuesta al escalón para gran señal}
+\subsection{Respuesta al escalón para gran señal}
 
 \HgraficarPNG{0.5}{sim_rta_escalon_gran.png}{Respuesta al escalón en gran señal.}{fig:rta_escalon_gran}
 
@@ -20,7 +20,7 @@
 	%\label{fig:rta_escalon_gran}
 %\end{figure}
 
-\subsubsection{Ancho de banda}
+\subsection{Ancho de banda}
 
 	Este parámetro se obtiene a partir de la simulación de la respuesta al escalón del circuito en pequeña señal (\SI{10}{\milli\volt}).
 	
@@ -41,7 +41,7 @@
 		\label{ec:bw}
 	\end{equation}
 
-\subsubsection{\textit{Slew Rate}}
+\subsection{\textit{Slew Rate}}
 
 \HgraficarPNG{0.5}{sim_rta_escalon_gran_zoom.png}{Respuesta al escalón en gran señal ampliado.}{fig:sim_rta_escalon_gran_sr}
 
