--- a/Informe/aux_functions.tex
+++ b/Informe/aux_functions.tex
@@ -58,4 +58,5 @@
 \providecommand{\lsia}[0]{\large\si{\ampere}}
 \providecommand{\lSI}[2]{\large\SI{#1}{#2}}
 
+\providecommand{\colortab}{\cellcolor[HTML]{FFFE65}}
 
