--- a/Informe/config.tex
+++ b/Informe/config.tex
@@ -11,7 +11,7 @@
 \providecommand{\mySubject}{Diseño de Circuitos Electrónicos (86.10)}
 \providecommand{\myKeywords}{UBA, Ingeniería, C2}
 
-\providecommand{\myTutor}{Nombre del tutor}
+\providecommand{\myTutor}{-}
 \providecommand{\myAuthorSurname}{Alonso, Manso, Russo, Zuccolo}
 \providecommand{\myTimePeriod}{Año 2018 - 2\textsuperscript{do} Cuatrimestre}
 
@@ -44,3 +44,4 @@
 \Keywordsfalse
 \Putgrouptrue		% Habilita/Deshabilita el \myGroup en los headers
 \Videofalse
+\Tutorfalse
