--- a/Informe/preamble.tex
+++ b/Informe/preamble.tex
@@ -95,6 +95,8 @@
      pdfkeywords={\myKeywords},
      colorlinks=true,        % false: boxed links; true: colored links
      linkcolor=black,        % color of internal links (change box color with linkbordercolor)
+%     colorlinks=false,        % false: boxed links; true: colored links
+%     linkbordercolor=gray,
      citecolor=black,        % color of links to bibliography
      filecolor=magenta,      % color of file links
      urlcolor=cyan           % color of external links
