--- a/Xcircuit/multiplicador.tex
+++ b/Xcircuit/multiplicador.tex
@@ -15,10 +15,10 @@
    \putbox{0.72in}{1.74in}{1.20}{Rp}%
    \putbox{0.64in}{0.82in}{1.20}{R2M}%
    \putbox{1.89in}{4.24in}{1.20}{R3M}%
-   \putbox{3.97in}{3.99in}{1.20}{1,1}%
-   \putbox{3.89in}{0.15in}{1.20}{-1.1}%
+   \putbox{4.06in}{4.07in}{1.20}{\centbox{\midbox{1,1}}}%
+   \putbox{4.06in}{0.24in}{1.20}{\centbox{\midbox{-1,1}}}%
    \putbox{0.47in}{2.32in}{1.20}{Ipol}%
-   \putbox{1.72in}{3.74in}{1.20}{$10 \Omega$}%
+   \putbox{1.97in}{3.74in}{1.20}{$10 \Omega$}%
    \putbox{1.47in}{3.07in}{1.20}{$3,3 k\Omega$}%
    \putbox{1.39in}{0.82in}{1.20}{$680 \Omega$}%
    \putbox{1.39in}{1.65in}{1.20}{$1 k\Omega$}%
