Se adelanta el tema de las mediciones, falta documentar la etapa de entrada

--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -156,12 +156,16 @@
 			\input{VIII1_resultados.tex}
 %	\pagebreak
 
-	\part{Construcción del prototipo}\label{part:construccion}
-		\Juan{Ver pdf ''Grupo01\_informe\_final`` como referencia}
-		\input{VI_prototipo}
+%	\part{Construcción del prototipo}\label{part:construccion}
+%		\Juan{Ver pdf ''Grupo01\_informe\_final`` como referencia}
+%		\input{VI_prototipo}
 
 	\part{Validación del prototipo}\label{part:mediciones}
-		\input{VII_valid.tex}
+		\section{Instrumentos utilizados}
+			\input{VII1_instrumentos.tex}
+
+		\section{Validación y resultados}
+			\input{VII2_valid.tex}
 
 	\part{Conclusiones}\label{part:conclusiones}
 		\input{VIII_conclusiones.tex}
